k8s/infra/argocd/argocd-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-headers
  namespace: argocd
spec:
  headers:
    contentSecurityPolicy: "frame-ancestors 'self'"
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: argocd-full-headers
  namespace: argocd
spec:
  chain:
    middlewares:
      - name: security-headers
        namespace: traefik
      - name: argocd-headers
        namespace: argocd
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`argocd.vityasy.me`) && HeadersRegexp(`Content-Type`, `^application/grpc-web`)
      kind: Rule
      priority: 10
      services:
        - name: argocd-server
          port: 8080
      middlewares:
        - name: argocd-full-headers
    - match: Host(`argocd.vityasy.me`)
      kind: Rule
      priority: 1
      services:
        - name: argocd-server
          port: 8080
      middlewares:
        - name: argocd-full-headers
